Fix import error

--- a/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
+++ b/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
@@ -23,7 +23,7 @@
     "from predictor.stand_alone import run_example\n",
     "# Warning, this can take a very long time (many hours)\n",
     "#EXPERIMENT_ID = run_example(sigopt_depth=0, sigopt_width=0)\n",
-    "EXPERIMENT_ID = 1545"
+    "EXPERIMENT_ID = 1545 # Put your experiment ID here if you have already run stand_alone"
    ]
   },
   {
@@ -219,7 +219,7 @@
     "import numpy\n",
     "import datetime\n",
     "\n",
-    "from constant import SEASON_1516_START, SEASON_1516_END\n",
+    "from predictor.constant import SEASON_1516_START, SEASON_1516_END\n",
     "\n",
     "def simulate_bets(model, moving_averages, transform_params, n_estimators, min_samples_split, min_samples_leaf, bet_threshold, start_time=SEASON_1516_START, end_time=SEASON_1516_END):\n",
     "    prediction_by_game_tuple = {}\n",
