Add blog post link

--- a/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
+++ b/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
@@ -7,7 +7,7 @@
     "SigOpt NBA Over/Under Model\n",
     "-------------------------\n",
     "\n",
-    "For more information, see the blog post here:\n",
+    "For more information, see the blog post here: http://blog.sigopt.com/post/136340340198/sigopt-for-ml-using-model-tuning-to-beat-vegas\n",
     "\n",
     "Learn more about how SigOpt works at https://sigopt.com/research"
    ]
