--- a/ipython-notebook-example/SigOpt_Introduction.ipynb
+++ b/ipython-notebook-example/SigOpt_Introduction.ipynb
@@ -80,17 +80,16 @@
    "source": [
     "import sigopt.interface\n",
     "# Find your SigOpt creds at https://sigopt.com/user/profile\n",
-    "from sigopt_creds import user_token, client_token, client_id\n",
+    "from sigopt_creds import client_token\n",
     "\n",
     "conn = sigopt.interface.Connection(\n",
-    "    user_token=user_token,\n",
     "    client_token=client_token,\n",
     ")\n",
     "\n",
-    "experiment = conn.experiments.create(client_id=client_id, data={\n",
-    "  'name': 'SigOpt Introduction Example',\n",
-    "  'parameters': obj.parameters,\n",
-    "}).experiment\n",
+    "experiment = conn.experiments().create(\n",
+    "  name='SigOpt Introduction Example',\n",
+    "  parameters=obj.parameters,\n",
+    ")\n",
     "\n",
     "print \"You can track your experiment at https://sigopt.com/experiment/{0}\".format(experiment.id)"
    ]
@@ -116,7 +115,7 @@
     "import time\n",
     "\n",
     "for _ in range(SIGOPT_TOTAL):\n",
-    "    suggestion = conn.experiments(experiment.id).suggest().suggestion\n",
+    "    suggestion = conn.experiments(experiment.id).suggestion().create()\n",
     "    obj_val = obj.evaluate(suggestion.assignments)\n",
     "    \n",
     "    # Note: SigOpt was designed to optimze time consuming and expensive processes like\n",
@@ -126,14 +125,15 @@
     "    # is time consuming or expensive enough to warrant the use of SigOpt.\n",
     "    time.sleep(0.1)\n",
     "    \n",
-    "    conn.experiments(experiment.id).report(data={\n",
-    "      'assignments': suggestion.assignments,\n",
-    "      'value': obj_val,\n",
-    "    })\n",
+    "    conn.experiments(experiment.id).observations().create(\n",
+    "      suggestion=suggestion.id,\n",
+    "      value=obj_val,\n",
+    "    )\n",
     "\n",
     "print \"Optimization done. View results at https://sigopt.com/experiment/{0}\".format(experiment.id)\n",
     "\n",
-    "best_observation = conn.experiments(experiment.id).bestobservation().observation\n",
+    "experiment_detail = conn.experiments(experiment.id).fetch()\n",
+    "best_observation = experiment_detail.progress.best_observation\n",
     "print \"Best value found: {0} at {1}\".format(best_observation.value, best_observation.assignments)"
    ]
   },
@@ -254,8 +254,8 @@
     }
    ],
    "source": [
-    "history = conn.experiments(experiment.id).history().observations.data\n",
-    "history = sorted(history, key=lambda obs: obs.to_json()['timestamp'])\n",
+    "history = conn.experiments(experiment.id).observations().fetch().data\n",
+    "history = sorted(history, key=lambda obs: obs.to_json()['created'])\n",
     "sigopt_history = [obs.assignments for obs in history]\n",
     "\n",
     "total_hist['sigopt'] = plot_obj_func(obj, history=sigopt_history)"
