--- a/ipython-notebook-example/SigOpt_Introduction.ipynb
+++ b/ipython-notebook-example/SigOpt_Introduction.ipynb
@@ -115,7 +115,7 @@
     "import time\n",
     "\n",
     "for _ in range(SIGOPT_TOTAL):\n",
-    "    suggestion = conn.experiments(experiment.id).suggestion().create()\n",
+    "    suggestion = conn.experiments(experiment.id).suggestions().create()\n",
     "    obj_val = obj.evaluate(suggestion.assignments)\n",
     "    \n",
     "    # Note: SigOpt was designed to optimze time consuming and expensive processes like\n",
