sigopt beats vegas v1

--- a/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
+++ b/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
@@ -43,14 +43,13 @@
    "source": [
     "import sigopt.interface\n",
     "# Find your SigOpt creds at https://sigopt.com/user/profile\n",
-    "from predictor.sigopt_tokens import user_token, client_token, client_id\n",
+    "from predictor.sigopt_creds import client_token\n",
     "\n",
-    "conn = sigopt.interface.Connection(\n",
-    "    user_token=user_token,\n",
-    "    client_token=client_token,\n",
-    ")\n",
+    "conn = sigopt.interface.Connection(client_token=client_token)\n",
     "\n",
-    "best_parameters = conn.experiments(EXPERIMENT_ID).bestobservation().observation.assignments\n",
+    "experiment_detail = conn.experiments(EXPERIMENT_ID).fetch()\n",
+    "best_observation = experiment_detail.progress.best_observation\n",
+    "best_parameters = best_observation.assignments\n",
     "\n",
     "moving_averages = (\n",
     "    best_parameters['slow_ma'],\n",
@@ -114,8 +113,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "obs = conn.experiments(EXPERIMENT_ID).history()\n",
-    "alist = [a for a in obs.observations.data]\n",
+    "obs = conn.experiments(EXPERIMENT_ID).observations().fetch()\n",
+    "alist = [a for a in obs.data]\n",
     "def ts(a):\n",
     "    timestamp = a.to_json()['timestamp']\n",
     "    return timestamp\n",
