--- a/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
+++ b/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
@@ -116,8 +116,8 @@
     "obs = conn.experiments(EXPERIMENT_ID).observations().fetch()\n",
     "alist = [a for a in obs.data]\n",
     "def ts(a):\n",
-    "    timestamp = a.to_json()['timestamp']\n",
-    "    return timestamp\n",
+    "    created = a.to_json()['created']\n",
+    "    return created\n",
     "alist = sorted(alist, key=ts)\n",
     "values = [a.value for a in alist]\n",
     "\n",
