--- a/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
+++ b/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
@@ -20,9 +20,10 @@
    },
    "outputs": [],
    "source": [
+    "from predictor.sigopt_creds import client_token\n",
     "from predictor.stand_alone import run_example\n",
     "# Warning, this can take a very long time (many hours)\n",
-    "#EXPERIMENT_ID = run_example(sigopt_depth=0, sigopt_width=0)\n",
+    "#EXPERIMENT_ID = run_example(client_token)\n",
     "EXPERIMENT_ID = 1545 # Put your experiment ID here if you have already run stand_alone"
    ]
   },
