Match up execution count

--- a/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean of 5-folded cross-validation accuracies: 0.796089071856\n"
+      "Mean of 5-folded cross-validation accuracies: 0.839165419162\n"
      ]
     }
    ],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -243,7 +243,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "View your experiment details at https://sigopt.com/experiment/2306\n"
+      "View your experiment details at https://sigopt.com/experiment/2309\n"
      ]
     }
    ],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -332,21 +332,22 @@
    "metadata": {},
    "source": [
     "### Optimization Loop\n",
-    "Perform 60 iterations of:\n",
+    "After creating an experiment, run the [optimization loop](https://sigopt.com/docs/overview/optimization) to tune the parameters:\n",
     "1. Receive suggested assignments from SigOpt\n",
     "2. Calculate the sentiment metric given these assignments\n",
-    "3. Report the observed sentiment metric to SigOpt"
+    "3. Report the observed sentiment metric to SigOpt\n",
+    "\n",
+    "Based on our observations, we advise running iterations equal to 10-20 times the number of parameters. Since we have 6 parameters, we'll run 60 iterations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "print \"View your experiment details at https://sigopt.com/experiment/{0}\".format(experiment.id)\n",
     "for _ in range(60):\n",
     "    suggestion = conn.experiments(experiment.id).suggestions().create()\n",
     "    opt_metric = sentiment_metric(POSITIVE_TEXT, NEGATIVE_TEXT, suggestion.assignments)\n",
@@ -368,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -388,15 +389,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best value: 0.862836826347, found at:\n",
+      "Best value: 0.87939745509, found at:\n",
       "{\n",
-      "    \"df_offset\": 0.1090952897880146,\n",
-      "    \"l1_coef\": 0.01912058464824784,\n",
-      "    \"log_min_df\": -15.45840961635736,\n",
-      "    \"log_reg_coef\": -11.526470082037305,\n",
+      "    \"df_offset\": 0.25,\n",
+      "    \"l1_coef\": 0.0,\n",
+      "    \"log_min_df\": -13.7549373592,\n",
+      "    \"log_reg_coef\": -7.57584670925,\n",
       "    \"min_ngram\": 1,\n",
       "    \"ngram_offset\": 1\n",
-      "}\n"
+      "}\n",
+      "View your final results at https://sigopt.com/experiment/2309\n"
      ]
     }
    ],
@@ -410,7 +412,8 @@
     "        indent=4, \n",
     "        separators=(',', ': ')\n",
     "    )\n",
-    ")"
+    ")\n",
+    "print \"View your final results at https://sigopt.com/experiment/{0}\".format(experiment.id)"
    ]
   }
  ],
