--- a/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "# Part II: Tuning the Text Classifier\n",
     "## Tunable Parameters\n",
-    "The objective metric is controlled by a set of parameters that potentially influence its performance. While the logistric regression model might be conceptually simple and implemented in many statistics and machine learning software packages, valuable engineering time and resources are often wasted experimenting with feature representation and parameter tuning via trial and error.  SigOpt can automatically and intelligently optimize your objective, letting you get back to working on other tasks.\n",
+    "The objective metric is controlled by a set of parameters that potentially influence its performance. While the logistic regression model might be conceptually simple and implemented in many statistics and machine learning software packages, valuable engineering time and resources are often wasted experimenting with feature representation and parameter tuning via trial and error.  SigOpt can automatically and intelligently optimize your objective, letting you get back to working on other tasks.\n",
     "\n",
     "Within SigOpt, [Parameters](https://sigopt.com/docs/objects/parameter) can be defined on integer, continuous, or categorical domains. The first step is to define a SigOpt [Experiment](https://sigopt.com/docs/objects/experiment) with parameters to be tuned.\n",
     "\n",
@@ -362,7 +362,7 @@
    "metadata": {},
    "source": [
     "# Closing Remarks\n",
-    "See the [original blog post](http://blog.sigopt.com/post/133089144983/sigopt-for-ml-automatically-tuning-text) for a discussion of results average over 20 runs of this optimization loop for grid search, random search, and SigOpt, all versus the baseline of no parameter turning. (Hint: you see accuracy gains with parameter tuning.)\n",
+    "See the [original blog post](http://blog.sigopt.com/post/133089144983/sigopt-for-ml-automatically-tuning-text) for a discussion of results average over 20 runs of this optimization loop for grid search, random search, and SigOpt, all versus the baseline of no parameter tuning. (Hint: you see accuracy gains with parameter tuning.)\n",
     "\n",
     "This short example scratches the surface of the types of ML related experiments one could conduct using SigOpt.  For example, SGDClassifier has lots of variations from which to select– another experiment might be to treat the loss function as a [categorical variable](https://sigopt.com/docs/objects/parameter).  What sort of models are you building that could benefit from better experimentation or optimization?  Stay tuned for more posts in our series on integrating SigOpt with various ML frameworks to solve **real problems more efficiently!**"
    ]
