Rearrange README to point to Jupyter. Add link to Jupyter install in notebook. Add output during 60 model training runs so it's clear something is happening. Remove the internal output from the external notebook (we don't want our internal results / experiment IDs in the blank notebook)

--- a/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# SigOpt for ML: Automatically Tuning Text Classifiers Walkthrough\n",
-    "*This notebook is a walkthrough companion for our blog post [SigOpt for ML: Automatically Tuning Text Classifiers](http://blog.sigopt.com/post/133089144983/sigopt-for-ml-automatically-tuning-text) by Research Engineer [Ian Dewancker](https://sigopt.com/about#ian)*\n",
+    "*This <a href=\"http://jupyter.readthedocs.org/en/latest/install.html\">Jupyter notebook</a> is a walkthrough companion for our blog post [SigOpt for ML: Automatically Tuning Text Classifiers](http://blog.sigopt.com/post/133089144983/sigopt-for-ml-automatically-tuning-text) by Research Engineer [Ian Dewancker](https://sigopt.com/about#ian)*\n",
     "\n",
     "Text classification problems appear quite often in modern information systems, and you might imagine building a small document/tweet/blogpost classifier for any number of purposes. In this example, we're building a pipeline to label [Amazon product reviews](http://www.cs.jhu.edu/~mdredze/datasets/sentiment/) as either favorable or not. First, we'll use scikit-learn to build a logistic regression classifier, performing k-fold cross validation to measure the accuracy. Next, we'll use SigOpt to tune the hyperparameters of both the feature extraction and the model building. \n",
     "## Setup\n",
@@ -25,18 +25,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POSITIVE: My husband is a BMW mechanic and he drives cars all day.  I wish I could get him one for every car\n",
-      "\n",
-      "NEGATIVE: Far better models for similair price range - dissapointed with the quality of the finish etc etc. works fine though.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "POSITIVE_TEXT = json.load(open(\"POSITIVE_list.json\"))\n",
@@ -116,15 +105,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean of 5-folded cross-validation accuracies: 0.839165419162\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import cross_validation\n",
     "cv_split = cross_validation.ShuffleSplit(\n",
@@ -168,16 +149,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Default parameters of vectorizer: {\"ngram_range\": [1, 1], \"max_df\": 1.0, \"min_df\": 1}\n",
-      "Default parameters of classifier: {\"alpha\": 0.0001, \"l1_ratio\": 0.15}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print \"Default parameters of vectorizer: {}\".format(json.dumps({\n",
     "    'min_df': vectorizer.min_df,\n",
@@ -238,15 +210,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "View your experiment details at https://sigopt.com/experiment/2309\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "experiment = conn.experiments().create(\n",
@@ -349,6 +313,7 @@
    "outputs": [],
    "source": [
     "for _ in range(60):\n",
+    "    print \"Training model candidate {0}\".format(_)\n",
     "    suggestion = conn.experiments(experiment.id).suggestions().create()\n",
     "    opt_metric = sentiment_metric(POSITIVE_TEXT, NEGATIVE_TEXT, suggestion.assignments)\n",
     "    conn.experiments(experiment.id).observations().create(\n",
@@ -384,24 +349,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best value: 0.87939745509, found at:\n",
-      "{\n",
-      "    \"df_offset\": 0.25,\n",
-      "    \"l1_coef\": 0.0,\n",
-      "    \"log_min_df\": -13.7549373592,\n",
-      "    \"log_reg_coef\": -7.57584670925,\n",
-      "    \"min_ngram\": 1,\n",
-      "    \"ngram_offset\": 1\n",
-      "}\n",
-      "View your final results at https://sigopt.com/experiment/2309\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_observation = experiment.progress.best_observation\n",
     "print \"Best value: {value}, found at:\\n{assignments}\".format(\n",
