Replace `_` with `i` now that we're actually using it

--- a/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
@@ -312,8 +312,8 @@
    },
    "outputs": [],
    "source": [
-    "for _ in range(60):\n",
-    "    print \"Training model candidate {0}\".format(_)\n",
+    "for i in range(60):\n",
+    "    print \"Training model candidate {0}\".format(i)\n",
     "    suggestion = conn.experiments(experiment.id).suggestions().create()\n",
     "    opt_metric = sentiment_metric(POSITIVE_TEXT, NEGATIVE_TEXT, suggestion.assignments)\n",
     "    conn.experiments(experiment.id).observations().create(\n",
