Adding back sample output, minus the stuff with internal results links

--- a/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
@@ -25,7 +25,18 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POSITIVE: My husband is a BMW mechanic and he drives cars all day.  I wish I could get him one for every car\n",
+      "\n",
+      "NEGATIVE: Far better models for similair price range - dissapointed with the quality of the finish etc etc. works fine though.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "POSITIVE_TEXT = json.load(open(\"POSITIVE_list.json\"))\n",
@@ -105,7 +116,15 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean of 5-folded cross-validation accuracies: 0.839165419162\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn import cross_validation\n",
     "cv_split = cross_validation.ShuffleSplit(\n",
@@ -149,7 +168,16 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default parameters of vectorizer: {\"ngram_range\": [1, 1], \"max_df\": 1.0, \"min_df\": 1}\n",
+      "Default parameters of classifier: {\"alpha\": 0.0001, \"l1_ratio\": 0.15}\n"
+     ]
+    }
+   ],
    "source": [
     "print \"Default parameters of vectorizer: {}\".format(json.dumps({\n",
     "    'min_df': vectorizer.min_df,\n",
@@ -349,7 +377,24 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best value: 0.87939745509, found at:\n",
+      "{\n",
+      "    \"df_offset\": 0.25,\n",
+      "    \"l1_coef\": 0.0,\n",
+      "    \"log_min_df\": -13.7549373592,\n",
+      "    \"log_reg_coef\": -7.57584670925,\n",
+      "    \"min_ngram\": 1,\n",
+      "    \"ngram_offset\": 1\n",
+      "}\n",
+      "View your final results at https://sigopt.com/experiment/2309\n"
+     ]
+    }
+   ],
    "source": [
     "best_observation = experiment.progress.best_observation\n",
     "print \"Best value: {value}, found at:\\n{assignments}\".format(\n",
