SigOpt 1.2.2 allows you to use environment variables for api auth

--- a/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
@@ -9,14 +9,21 @@
     "\n",
     "Text classification problems appear quite often in modern information systems, and you might imagine building a small document/tweet/blogpost classifier for any number of purposes. In this example, we're building a pipeline to label [Amazon product reviews](http://www.cs.jhu.edu/~mdredze/datasets/sentiment/) as either favorable or not. First, we'll use scikit-learn to build a logistic regression classifier, performing k-fold cross validation to measure the accuracy. Next, we'll use SigOpt to tune the hyperparameters of both the feature extraction and the model building. \n",
     "## Setup\n",
-    "If you’d like to try running this example, sign up for a [SigOpt](https://sigopt.com/) free trial and find your newly created credentials on your [profile page](sigopt.com/user/plan).  To quickly set up an environment to run this example, we recommend using a Mac OS X (with brew) or an Ubuntu machine having at least 4GB of RAM (t2.mediums in EC2 are cheap and work great).  Once you have a suitable machine this script should be all you need to get to get started:\n",
+    "If you’d like to try running this example, we recommend using a Mac OS X (with brew) or an Ubuntu machine having at least 4GB of RAM (t2.mediums in EC2 are cheap and work great).\n",
+    "\n",
+    "1. Sign up for a [SigOpt](https://sigopt.com/) free trial and find your `client_token` on your [profile page](sigopt.com/user/plan).\n",
+    "2. Set the environment variable `SIGOPT_API_TOKEN` to your `client_token`\n",
+    "3. Clone the `sigopt-examples` repo\n",
+    "4. Run the setup script under the `text-classifier` example.\n",
+    "\n",
+    "Steps 2-4 as run from the terminal:\n",
     "```\n",
-    "# on Mac OS X or Ubuntu machine\n",
-    "git clone https://github.com/sigopt/sigopt-examples.git\n",
-    "cd sigopt-examples/text-classifier/\n",
-    "sudo ./setup_env.sh\n",
+    "export $SIGOPT_API_TOKEN=<CLIENT_TOKEN>                 # set your SigOpt api token\n",
+    "git clone https://github.com/sigopt/sigopt-examples.git # Clone the repo\n",
+    "cd sigopt-examples/text-classifier/                     # This example is called text-classifier\n",
+    "sudo ./setup_env.sh                                     # Setup your environment\n",
     "```\n",
-    "This step will download two json files, one containing sentences of positive sentiment and the other containing sentences of negative sentiment:"
+    "The final step of the setup script will download two json files, one containing sentences of positive sentiment and the other containing sentences of negative sentiment:"
    ]
   },
   {
@@ -210,31 +217,15 @@
    },
    "outputs": [],
    "source": [
-    "# insert your client token into sigopt_creds.py\n",
-    "# find your client token at sigopt.com/user/profile\n",
-    "from sigopt_creds import client_token\n",
-    "try:\n",
-    "    assert client_token\n",
-    "except AssertionError:\n",
-    "    raise Exception(\"Insert your client token into sigopt_creds.py. \"\n",
-    "                    \"Find it at sigopt.com/user/profile\")"
+    "# Set the environment variable SIGOPT_API_TOKEN to your client token\n",
+    "# Find you client token at sigopt.com/user/profile\n",
+    "import sigopt.interface\n",
+    "conn = sigopt.interface.Connection()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import sigopt.interface\n",
-    "conn = sigopt.interface.Connection(client_token=client_token)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -282,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -334,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -362,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -373,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
