Run ipython notebook as standalone (will still need to clone git for setup script and requirements)

--- a/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
@@ -9,26 +9,41 @@
     "\n",
     "Text classification problems appear quite often in modern information systems, and you might imagine building a small document/tweet/blogpost classifier for any number of purposes. In this example, we're building a pipeline to label [Amazon product reviews](http://www.cs.jhu.edu/~mdredze/datasets/sentiment/) as either favorable or not. First, we'll use scikit-learn to build a logistic regression classifier, performing k-fold cross validation to measure the accuracy. Next, we'll use SigOpt to tune the hyperparameters of both the feature extraction and the model building. \n",
     "## Setup\n",
-    "If you’d like to try running this example, we recommend using a Mac OS X (with brew) or an Ubuntu machine having at least 4GB of RAM (t2.mediums in EC2 are cheap and work great).\n",
+    "If you’d like to try running this example, we recommend using a Mac OS X (with brew) or an Ubuntu machine having at least 4GB of RAM (t2.mediums in EC2 are cheap and work great). Sign up for a [SigOpt](https://sigopt.com/) free trial and find your API token on your [profile page](sigopt.com/user/plan).\n",
     "\n",
-    "1. Sign up for a [SigOpt](https://sigopt.com/) free trial and find your `client_token` on your [profile page](sigopt.com/user/plan).\n",
-    "2. Set the environment variable `SIGOPT_API_TOKEN` to your `client_token`\n",
-    "3. Clone the `sigopt-examples` repo\n",
-    "4. Run the setup script under the `text-classifier` example.\n",
-    "\n",
-    "Steps 2-4 as run from the terminal:\n",
-    "```\n",
-    "export $SIGOPT_API_TOKEN=<CLIENT_TOKEN>                 # set your SigOpt api token\n",
-    "git clone https://github.com/sigopt/sigopt-examples.git # Clone the repo\n",
-    "cd sigopt-examples/text-classifier/                     # This example is called text-classifier\n",
-    "sudo ./setup_env.sh                                     # Setup your environment\n",
-    "```\n",
-    "The final step of the setup script will download two json files, one containing sentences of positive sentiment and the other containing sentences of negative sentiment:"
+    "Edit the next few lines, inserting your API token and other appropriate values to allow this notebook to run the setup script for this example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Cloning into 'sigopt-examples'...\", 'setup completed']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%! \n",
+    "export SIGOPT_API_TOKEN=<YOUR API TOKEN>                            # set your SigOpt API token\n",
+    "git clone https://github.com/sigopt/sigopt-examples.git             # Clone the repo\n",
+    "cd sigopt-examples/text-classifier/                                 # text-classifier example\n",
+    "echo <YOUR PASSWORD FOR SUDO> | sudo -S ./setup_env.sh &> /dev/null # Setup your environment\n",
+    "echo setup completed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -45,9 +60,17 @@
     }
    ],
    "source": [
-    "import json\n",
-    "POSITIVE_TEXT = json.load(open(\"POSITIVE_list.json\"))\n",
-    "NEGATIVE_TEXT = json.load(open(\"NEGATIVE_list.json\"))\n",
+    "import json, urllib\n",
+    "(negative_file, _ ) = urllib.urlretrieve(\n",
+    "    \"http://sigopt-public.s3-website-us-west-2.amazonaws.com/NEGATIVE_list.json\",\n",
+    "    \"NEGATIVE_LIST.json\"\n",
+    ")\n",
+    "(positive_file, _) = urllib.urlretrieve(\n",
+    "    \"http://sigopt-public.s3-website-us-west-2.amazonaws.com/POSITIVE_list.json\",\n",
+    "    \"POSITIVE_LIST.json\"\n",
+    ")\n",
+    "POSITIVE_TEXT = json.load(open(positive_file))\n",
+    "NEGATIVE_TEXT = json.load(open(negative_file))\n",
     "print \"POSITIVE: {}\".format(POSITIVE_TEXT[0])\n",
     "print \"NEGATIVE: {}\".format(NEGATIVE_TEXT[0])"
    ]
