Add appendix for creating predictor from best observation's assignments

--- a/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
@@ -402,7 +402,127 @@
     "        indent=4, \n",
     "        separators=(',', ': ')\n",
     "    )\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def sentiment_classifier(positive, negative, assignments):\n",
+    "    min_ngram = assignments['min_ngram']\n",
+    "    max_ngram = min_ngram + assignments['ngram_offset']\n",
+    "    min_doc_frequency = math.exp(assignments['log_min_df'])\n",
+    "    max_doc_frequency = min_doc_frequency + assignments['df_offset']\n",
+    "    vectorizer = CountVectorizer(\n",
+    "        min_df=min_doc_frequency, \n",
+    "        max_df=max_doc_frequency,                          \n",
+    "        ngram_range=(min_ngram, max_ngram),\n",
+    "    )\n",
+    "    text_features = vectorizer.fit_transform(positive + negative)\n",
+    "    target = [1] * len(positive) + [-1] * len(negative)\n",
+    "    \n",
+    "    alpha = math.exp(assignments['log_reg_coef'])\n",
+    "    l1_ratio = assignments['l1_coef']\n",
+    "    classifier = SGDClassifier(\n",
+    "        loss='log', \n",
+    "        penalty='elasticnet', \n",
+    "        alpha=alpha, \n",
+    "        l1_ratio=l1_ratio\n",
+    "    )\n",
+    "    classifier.fit(text_features, target)\n",
+    "    return (vectorizer, classifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "(best_vectorizer, best_classifier) = sentiment_classifier(\n",
+    "    POSITIVE_TEXT, \n",
+    "    NEGATIVE_TEXT, \n",
+    "    best_observation.assignments\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def predict_sentiment(text, verbose=True):\n",
+    "    text_features = best_vectorizer.transform([text])\n",
+    "    sentiment = best_classifier.predict(text_features)[0]\n",
+    "    if verbose:\n",
+    "        if sentiment == 1:\n",
+    "            print \"positive: {}\".format(text)\n",
+    "        else:\n",
+    "            print \"negative: {}\".format(text)\n",
+    "    return sentiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "positive: Jesse, 15 lives in Harlem, New York City.  He is the only child of a bright couple and his best friend, Rise is one of his biggest influences.\n",
+      "\n",
+      "Jesse and Rise grew up together.  When Rise, 17 turns to crime and joins the Counts, a local street gang and insists on bringing Jesse in with him along with their friend C.J., Jesse starts to reassess their friendship.  He sadly realizes that he and Rise are traveling down different streets; the drive-by shooting of their friend Bobby, 14 has left the neighborhood shaken.  C.J., a musical prodigy who plays piano in their church also has his sights set on a different path.  It is C.J. and Jesse, a budding young artist who is quite talented at drawing who realize they have more in common with each other.\n",
+      "\n",
+      "Rise and the Counts are in for a Count-down; sadly, drive-bys claim more casualties.  The Counts were described as being on the tame end of street gangs; a warring faction called the Diablos were responsible for shooting a friend; killing a cabbie and later, some members of the Counts.\n",
+      "\n",
+      "Sidney, a kind and fair police officer takes the boys under his wing.  He is respected in the neighborhood and word on the street was that he was a fair man, which he was.  When Mason, 19 an older member of the Counts was busted for homicide, it was Sidney who took Rise and Jesse to the jail (\"Iron City\") to see the fate in store for their former friend.  \n",
+      "\n",
+      "More problems crop up in the neighborhood; Rise, seeing a chance to leave Harlem wants to call Jesse and the Counts together for a final goodbye.  Sadly, that goodbye really was the end.\n",
+      "\n",
+      "This is an excellent book that reflects the city and street culture well.  The characters are fresh, cutting edge, serious and believable.  The drawings were excellent and a bonus to this book.  Jesse, an aspiring cartoonist created two West Indian charcters, a wise man and a bird.  The bird was a metaphor for Jesse and it is through this avian character that he asks questions in his drawings that Wise answers.  Myers has written many excellent books, but I think he really outdid himself with this one\n",
+      "\n",
+      "negative: Disappointing to see a man of Garbarek's gifts drift inexorably towards artistic middle-age and the lure of MOR classical and soft world-beat markets. No one expects him to do a 'jazz' album nowadays but after a six-year recording hiatus we might have expected some innovation and sharpness in the settings he chooses. Sadly,the evidence on this release is of an artist who's content to mine the same musical territory for about 15 years now to the point of exhaustion; theres nothing here he hasn't said better on his previous three or four outings. All is not lost though, and there are moments of stark beauty here and there but they are mostly lost in a soft sticky morass of Garbarek cliches and the kind of uninspired composition better suited to a film soundtrack or TV documentary about some beautiful natural environment. Forget the misleading hype elsewhere and get hold of just about any of his albums from about 1972 through to 1987 and I guarantee you'll feel better for it\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "sentiment = predict_sentiment(random.choice(POSITIVE_TEXT))\n",
+    "sentiment = predict_sentiment(random.choice(NEGATIVE_TEXT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "View your final results at https://sigopt.com/experiment/2328\n"
+     ]
+    }
+   ],
+   "source": [
     "print \"View your final results at https://sigopt.com/experiment/{0}\".format(experiment.id)"
    ]
   }
