Add fallback for users who don't set SIGOPT_API_KEY

--- a/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
@@ -243,7 +243,10 @@
     "# Set the environment variable SIGOPT_API_TOKEN to your client token\n",
     "# Find you client token at sigopt.com/user/profile\n",
     "import sigopt.interface\n",
-    "conn = sigopt.interface.Connection()"
+    "try:\n",
+    "    conn = sigopt.interface.Connection()\n",
+    "except ValueError:\n",
+    "    conn = sigopt.interface.Connection(client_token=YOUR_API_TOKEN)"
    ]
   },
   {
