--- a/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/SigOpt Text Classifier Walkthrough.ipynb
@@ -11,7 +11,7 @@
     "## Setup\n",
     "If you’d like to try running this example, we recommend using a Mac OS X (with brew) or an Ubuntu machine having at least 4GB of RAM (t2.mediums in EC2 are cheap and work great). Sign up for a [SigOpt](https://sigopt.com/) free trial and find your API token on your [profile page](sigopt.com/user/plan).\n",
     "\n",
-    "Edit the next few lines, inserting your API token and other appropriate values to allow this notebook to run the setup script for this example:"
+    "Edit the next few lines, inserting your API token and other appropriate values to allow this notebook to run the setup script for this example. Press shift + enter to run each cell:"
    ]
   },
   {
