match setup to README

--- a/estimated-training-time/Estimated Training Time vs Parameter Values.ipynb
+++ b/estimated-training-time/Estimated Training Time vs Parameter Values.ipynb
@@ -13,35 +13,15 @@
     "## Don't Have Any Experiments?\n",
     "Try running our example of [Tuning a Text Classifier](blog.sigopt.com/post/133089144983/sigopt-for-ml-automatically-tuning-text) (there is also a [notebook walkthrough](https://github.com/sigopt/sigopt-examples/blob/master/text-classifier/SigOpt%20Text%20Classifier%20Walkthrough.ipynb) version) and using that experiment id for this tutorial. Do the graphs match up with your intuition about how each parameter value should theoretically affect training time?\n",
     "\n",
-    "## Prerequisites\n",
-    "Run this notebook locally ([Jupyter setup instructions](https://jupyter.readthedocs.org/en/latest/install.html). Alternatively, running \n",
+    "## Setup\n",
+    "Run the following commands to clone this repo, install dependencies, and get this notebook up and running. After running these commands a browser window should pop up at [localhost:8888(http://localhost:8888), from there you can navigate to this notebook in the browser.\n",
     "```\n",
-    "pip install jupyter\n",
+    "git clone https://github.com/sigopt/sigopt-examples.git\n",
+    "cd sigopt-examples/estimated-training-time/\n",
+    "pip install -r requirements.txt\n",
     "jupyter notebook\n",
-    "``` \n",
-    "in the same folder as this notebook will also work for most people)\n",
-    "\n",
-    "Install [plotly](https://plot.ly/ipython-notebooks/), and [sigopt](https://sigopt.com/docs/overview/python) (running the next cell will install these dependencies)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%%!\n",
-    "pip install plotly 1>/dev/null\n",
-    "pip install sigopt 1>/dev/null"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get your SigOpt API token from your [user dashboard](https://sigopt.com/user/profile). Set as the environment variable `SIGOPT_API_TOKEN`, or insert directly into the code below."
+    "```\n",
+    "Next, get your SigOpt API token from your [user dashboard](https://sigopt.com/user/profile). Set as the environment variable `SIGOPT_API_TOKEN`, or insert directly into the code below."
    ]
   },
   {
