--- a/estimated-training-time/Estimated Training Time vs Parameter Values.ipynb
+++ b/estimated-training-time/Estimated Training Time vs Parameter Values.ipynb
@@ -14,7 +14,7 @@
     "Try running our example of [Tuning a Text Classifier](blog.sigopt.com/post/133089144983/sigopt-for-ml-automatically-tuning-text) (there is also a [notebook walkthrough](https://github.com/sigopt/sigopt-examples/blob/master/text-classifier/SigOpt%20Text%20Classifier%20Walkthrough.ipynb) version) and using that experiment id for this tutorial. Do the graphs match up with your intuition about how each parameter value should theoretically affect training time?\n",
     "\n",
     "## Setup\n",
-    "Run the following commands to clone this repo, install dependencies, and get this notebook up and running. After running these commands a browser window should pop up at [localhost:8888(http://localhost:8888), from there you can navigate to this notebook in the browser.\n",
+    "Run the following commands to clone this repo, install dependencies, and get this notebook up and running. After running these commands a browser window should pop up, and from there you can navigate to this notebook ([this link](http://localhost:8888/notebooks/Estimated%20Training%20Time%20vs%20Parameter%20Values.ipynb) should also take you directly to the notebook one jupyter is running).\n",
     "```\n",
     "git clone https://github.com/sigopt/sigopt-examples.git\n",
     "cd sigopt-examples/estimated-training-time/\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": false
