--- a/estimated-training-time/Estimated Training Time vs Parameter Values.ipynb
+++ b/estimated-training-time/Estimated Training Time vs Parameter Values.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Explore SigOpt: Tutorial on Estimated Training Time Data\n",
+    "_By [Alexandra Johnson](https://sigopt.com/about#alexandra), Software Engineer_\n",
+    "\n",
     "SigOpt helps you optimize your hyperparameters, but did you know that SigOpt can also help you explore how long it takes to train your models? This jupyter notebook tutorial will show you how to take advantage of information already present in the [SigOpt API](https://sigopt.com/docs/overview) to learn new and interesting insights about how parameter values affect model training time.\n",
     "\n",
     "## How it Works\n",
